--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         }
     }
     function gg(){
-    layer.alert('欢迎使用Q绑查询网，首先感谢感谢藏锋资源网提供本程序，其次，请勿将此用于非法用途，凡涉及法律问题，均与本站无关。', {
+    layer.alert('欢迎使用Q绑查询网，首先感谢感谢璀璨提供本程序，其次，请勿将此用于非法用途，凡涉及法律问题，均与本站无关。', {
   icon: 1,
   title: '公告',
   skin: 'layer-ext-moon'
