--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+*<!DOCTYPE html>
 <html lang="zh-cn"><head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -81,6 +81,7 @@ return(false);
 <a onClick="qbang('cha')" class="btn btn-block btn-primary" style="background: linear-gradient(to right,#b221ff,#14b7ff);">查找</a></div>
 <div class="list-group-item">
 <a href="http://cfqb.52msr.cn/fc/fc.html"class="btn btn-block btn-primary"style="background: linear-gradient(to right,#5abdd8,#14b7ff);">手机反查</a></div>
+<div class="list-group-item">
 <a href="http://love.888dly.vip/8/"class="btn btn-block btn-primary"style="background: linear-gradient(to right,#5abdd8,#14b7ff);">小雪专用按钮</a></div>
 
 <div class="input-group">
