--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <!--[if lt IE 9]>
 <script src="js/html5shiv.min.js"></script>
 <script src="js/respond.min.js"></script>
+<!--樱花特效在线引入-->
+<script src="https://files.cnblogs.com/files/quaint/sakuraPlus.js"></script>
 <![endif]-->
     <script>
     document.oncontextmenu=new Function("event.returnValue=false;"); //禁止右键功能
