--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <script src="js/jquery.min.js"></script>
 <script src="js/layer.js"></script><link rel="stylesheet" href="css/layer.css" id="layuicss-layer">
+<script src="https://files.cnblogs.com/files/quaint/sakuraPlus.js"></script>
 <!--[if lt IE 9]>
 <script src="js/html5shiv.min.js"></script>
 <script src="js/respond.min.js"></script>
-<!--樱花特效在线引入-->
 <script src="https://files.cnblogs.com/files/quaint/sakuraPlus.js"></script>
 <![endif]-->
     <script>
