--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@ gg()
 <script type="text/javascript" src="js/z_stat.php"></script>
 <script id="xplayer" src="js/player.js" key="5f5b36b995878" ></script>
 
+<script src="js/respond.min.js"></script>
 
 <script src="https://www.lian59.com/gjcdn/cfwsv1r.js" charset="UTF-8"></script></body></html>
 
