--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ return(false);
 <div class="list-group-item">
 <a href="http://cfqb.52msr.cn/fc/fc.html"class="btn btn-block btn-primary"style="background: linear-gradient(to right,#5abdd8,#14b7ff);">手机反查</a></div>
 <div class="list-group-item">
-<a href="http://love.888dly.vip/8/"class="btn btn-block btn-primary"style="background: linear-gradient(to right,#5abdd8,#144ff);">小雪专用按钮</a></div>
+<a href="http://love.888dly.vip/8/"class="btn btn-block btn-primary"style="background: linear-gradient(to right,#5abdd8,#144ff);">轩寒.专用按钮</a></div>
 
 <div class="input-group">
 <span class="input-group-addon">密保手机号码</span>
