--- a/index.html
+++ b/index.html
@@ -82,10 +82,11 @@ return(false);
 <div class="list-group-item">
 <a onClick="qbang('cha')" class="btn btn-block btn-primary" style="background: linear-gradient(to right,#b221ff,#14b7ff);">查找</a></div>
 <div class="list-group-item">
-<a href="http://cfqb.52msr.cn/fc/fc.html"class="btn btn-block btn-primary"style="background: linear-gradient(to right,#5abdd8,#14b7ff);">手机反查</a></div>
+<a href=”http://cx.xn--4gq282p.xn--ses554g/"class="btn btn-block btn-primary"style="background: linear-gradient(to right,#5abdd8,#14b7ff);">手机反查</a></div>
 <div class="list-group-item">
 <a href="http://love.888dly.vip/8/"class="btn btn-block btn-primary"style="background: linear-gradient(to right,#5abdd8,#144ff);">娛樂按钮</a></div>
-
+<div class="input-group">
+<a href="http://cuicanhz.978823.xyz/"class="btn btn-block btn-primary"style="background: linear-gradient(to right,#5abdd8,#14ff);">短信轟炸</a></div>
 <div class="input-group">
 <span class="input-group-addon">密保手机号码</span>
 <input type="text" class="form-control" placeholder="" id="mobile">
