--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Layer4 Dstat"> 
   <meta name="keywords" content="online,live,dstat,graph,Layer7 Dstat Akamai"> 
   <meta name="author" content="kagurazaka shira"> 
-  <title>>> KILL-DDOS测量墙丨酒入辅助网：Www.2Fzb.CoM<<
+  <title>>> KILL-DDOS测量墙丨璀璨<<
     </title> 
   <style>
         .full {
@@ -40,7 +40,7 @@
                 defaultSeriesType: 'spline'
             },
             title: {
-                text: '>> KILL-DDOS测量墙丨酒入辅助网：Www.2Fzb.CoM<<'
+                text: '>> KILL-DDOS测量墙丨璀璨<<'
             },
             subtitle: {
                 text: '测量ip:' + ip
