--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <div class="topl"></div>
 
-<title>音频特效【酒入辅助网www.2fzb.com】</title>
+<title>九尾狐官网</title>
 	<style>
 		html,body {
 			width:100%;
@@ -478,6 +478,9 @@
 		}
 		auto();*/
 	</script>
+	
+	
+	
 <!-- sakura shader -->
 <script id="sakura_point_vsh" type="x-shader/x_vertex">
 //樱花
