--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
 
 <body>
 
-
+<a href="https://www.baidu.com/"> <button>点我跳转到度娘！</button> </a> 
+	
 <div id="show">CHEN- 小小</div>
 	<div id="clock">00:00</div>
 	<canvas id="can">您的浏览器不支持canvas标签</canvas>
