--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@ glyphicon glyphicon-phone"></span>密保手机号码</span>
 				}, function () {
 					layer.close(layer.index);
 					var alert_1 = layer.load(0, { shade: false });
-					$url = 'http://qb-api.com/qb-api.php?mod=cha&qq=' + qq;
+					$url = 'https://cxx.yun7.me/qqapi?qq=' + qq;
 
 					$.getJSON($url, function (json) {
 						layer.close(alert_1);
