--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<noscript>
 		<link rel="stylesheet" href="./css/noscript.css" />
 	</noscript>
-	<script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+	<script src="//lib.baomitu.com/jquery/1.12.4/jquery.min.js"></script>
 	<script src="//lib.baomitu.com/layer/3.1.1/layer.js"></script>
 	<link rel="stylesheet" href="http://lib.baomitu.com/layer/3.1.1/theme/default/layer.css?v=3.1.1"
 		id="layuicss-layer">
